# OuiComply

./: .alpicignore  .env.example  .gitignore  .vercelignore  ALPIC_DEPLOYMENT.md  ALPIC_DEPLOYMENT_CONFIG.md  ALPIC_QUICK_START.md  CONTRACT_TEST_RESULTS.md  CUAD_DOWNLOAD_GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  DEPLOY_TO_CLOUD.md  DEPLOY_VERCEL_MANUAL.md  Dockerfile  ENVISIONED_WORKFLOW_IMPLEMENTATION.md  FASTMCP_IMPLEMENTATION.md  FASTMCP_SUCCESS_SUMMARY.md  FINAL_ERROR_FIXES_SUCCESS.md  HACKATHON_SUBMISSION_SUMMARY.md  Hackathon.md  LECHAT_INTEGRATION_GUIDE.md  LECHAT_TUNNELING_GUIDE.md  MCP_INSPECTOR_DEBUG_GUIDE.md  MULTIAGENTIC_WORKFLOW_SUCCESS.md  NGROK_SETUP.md  NGROK_TROUBLESHOOTING.md  PDF_PROCESSING_GUIDE.md  PROJECT_STATUS.md  PROJECT_STRUCTURE.md  PROMPT_BASED_AUTOMATION_UPDATE.md  Procfile  RAILWAY_DEPLOYMENT.md  README.md  README_ENHANCED.md  README_MCP.md  README_MULTIAGENTIC_FLOW.md  REVISED_INTEGRATION_PLAN.md  STRUCTURED_RESPONSES_ENHANCEMENT.md  (+164 more)
DevTools/: README.md  mistral-sdk-guide.md
DevTools/api-examples/: README.md  function-calling.py  structured-outputs.py
DevTools/testing/: README.md  test_function_calling.py
Scripts/: activate  activate.bat
api/: health.py  index.py  mcp.py  simple_index.py
docs/: sample_contract.txt
src/: __init__.py  config.py  mcp_server.py  mistral_integration.py
src/compliance/: __init__.py  gdpr_analyzer.py  licensing_analyzer.py  sox_analyzer.py
src/legal_datasets/: __init__.py  cuad_integration.py
src/resources/: __init__.py  base.py
src/tools/: __init__.py  automation_agent.py  base.py  compliance_engine.py  document_ai.py  lechat_interface.py  memory_integration.py  pdf_analysis_tool.py  pdf_processor.py
tests/: __init__.py  test_compliance_engine.py  test_document_ai.py  test_mcp_server.py  test_server.py
